--- a/docs/report.tex
+++ b/docs/report.tex
@@ -3,19 +3,19 @@
 \usepackage{titlesec}
 
 \titleformat{\section}
-{\LARGE}
+{\huge}
 {}
 {0em}
 {\bfseries}[\titlerule]
 
 \titleformat{\subsection}
-{\Large}
+{\LARGE}
 {}
 {0em}
 {\bfseries}
 
 \titleformat{\subsubsection}[runin]
-{}
+{\Large}
 {}
 {0em}
 {\bfseries}
@@ -74,7 +74,8 @@ In partial fulfilment of the requirements for the award of degree of Bachelor of
 DIVISION OF COMPUTER ENGINEERING 
 
 SCHOOL OF ENGINEERING
-COCHIN UNIVERSITY OF SCIENCE AND TECHNOLOGY
+
+COCHIN UNIVERSITY OF SCIENCE AND TECHNOLOGY
 
 \hspace{1em}
 
@@ -93,12 +94,13 @@ MARCH 2017
 
 \LARGE
 DIVISION OF COMPUTER ENGINEERING\\
-SCHOOL OF ENGINEERING\\COCHIN UNIVERSITY OF SCIENCE AND TECHNOLOGY\\
+SCHOOL OF ENGINEERING\\
+COCHIN UNIVERSITY OF SCIENCE AND TECHNOLOGY\\
 
 \hspace{1em}
 
 \huge
-{\emph CERTIFICATE}
+\emph{CERTIFICATE}
 
 \hspace{1em}
 
@@ -158,6 +160,20 @@ Project Guide\\
 
 
 \end{center}
+
+\vspace*{\fill}
+
+\newpage
+
+\vspace*{\fill}
+
+\section{Acknowledgement}
+
+\LargeWe take this opportunity to express our profound gratitude and deep regards to our guide \textbf{Mrs Anu M.}
+,for providing us with the right guidance and advice at the crucial junctures and for her constant encouragement throughout the course of this project. We are highly indebted to \textbf{Asst. Prof. Pramod Pavithran}
+ and \textbf{Mr Damodaran.V}
+ , Division of Computer Science our batch coordinator for her constant supervision and support for completing the project. We extend our sincere thanks to our respected Head of the department, \textbf{Ancy Zachariah}
+ ,Head of Division,Division of Computer Science and all other faculty members of for sharing their valuable time and knowledge with us. We thank God, the almighty for blessing us with his grace and taking our endeavour to a successful culmination. Lastly we would like to thank my friends and family for their constant encouragement without which this project would not have been possible.
 
 \vspace*{\fill}
 
