--- a/docs/report.tex
+++ b/docs/report.tex
@@ -1,6 +1,7 @@
 \documentclass{article}
 
 \usepackage{titlesec}
+\usepackage[margin=1in]{geometry}
 
 \titleformat{\section}
 {\huge}
@@ -45,13 +46,13 @@ submitted by
 \hspace{1em}
 
 \Large
-Abin Simon
+Abin Simon ( 12150005 )
 
 \Large
-Aayisha A A
+Aayisha A A ( 12150076 )
 
 \Large
-Abhai Kollara
+Abhai Kollara ( 12150002 )
 \end{center}
 }
 
@@ -122,13 +123,13 @@ done by
 \hspace{1em}
 
 \Large
-Abin Simon
+Abin Simon ( 12150005 )
 
 \Large
-Aayisha A A
+Aayisha A A ( 12150076 )
 
 \Large
-Abhai Kollara
+Abhai Kollara ( 12150002 )
 
 \hspace{1em}
 
@@ -165,27 +166,181 @@ Project Guide\\
 
 \newpage
 
-\vspace*{\fill}
+% \vspace*{\fill}
 
 \section{Acknowledgement}
+\vspace{1em}
 
-\LargeWe take this opportunity to express our profound gratitude and deep regards to our guide \textbf{Mrs Anu M.}
+\Large
+We take this opportunity to express our profound gratitude and deep regards to our guide \textbf{Mrs Anu M.}
 ,for providing us with the right guidance and advice at the crucial junctures and for her constant encouragement throughout the course of this project. We are highly indebted to \textbf{Asst. Prof. Pramod Pavithran}
  and \textbf{Mr Damodaran.V}
  , Division of Computer Science our batch coordinator for her constant supervision and support for completing the project. We extend our sincere thanks to our respected Head of the department, \textbf{Ancy Zachariah}
  ,Head of Division,Division of Computer Science and all other faculty members of for sharing their valuable time and knowledge with us. We thank God, the almighty for blessing us with his grace and taking our endeavour to a successful culmination. Lastly we would like to thank my friends and family for their constant encouragement without which this project would not have been possible.
+ 
+ \begin{flushright}
+ 
+  \vspace{2em}
+  
+ \Large
+ Thanking you,\\
+ \vspace{1em}
+ 
+ \Large
+ Abin Simon\\
+ Aayisha A A\\
+ Abhai Kollara\\
+ 
+ \end{flushright}
 
-\vspace*{\fill}
+% \vspace*{\fill}
+
+\newpage
+
+\section{Decleration}
+\vspace{1em}
+\Large
+We, Miss Aayisha A A,Mr Abhai Kollara Dilip,Mr Abin Simon hereby declare that this project is the record of authentic work carried out by us during the academic year 2016 -2017 and has not been submitted to any other University or Institute towards the award of any degree.
+
+\vspace{5em}
+
+\begin{minipage}[b]{0.33333\textwidth}
+\raggedright
+Abin Simon
+\end{minipage}%
+\begin{minipage}[b]{0.33333\textwidth}
+\centering
+Aayisha A A
+\end{minipage}%
+\begin{minipage}[b]{0.33333\textwidth}
+\raggedleft
+Abhai Kollara
+\end{minipage}
+
+\newpage
+
+\section{Abstract}
+\vspace{1em}
 
 \newpage
 
 \section{Introduction}
-\section{Example section}
-\subsection{How to}
-\subsubsection{Apple}
+\hspace{1em}
 
-Now for the actual contnet let me add in something here
+\Large
+The most important aspect of a academic studies for a student is the involvement of the teachers in the matters of the students. It is also very vital for the student to stay updated about what is happening in the college. With this project we aim to do just that. We are creating a platform that can help the students to easily stay up to date on what is happening in their academic matters. They have an easy and intuitive way to see what is in their calendar.\\
 
-\section{Another heading}
+\vspace{1em}
+\Large
+Our platform also provides an effective way for the student to track his daily activities at the academic institute by giving then a simple and efficient platform to take notes and track their attendance. This, we think is a great tool that will help the student of the academic institution to be able to track his time at the institution.\\
+
+\vspace{1em}
+\Large
+The platform with its ability to take down notes for the classes they are attending in the university, in a platform that has their timetable and other data integrated along with it is a huge bonus for the student as it gives them a seamless way to take down notes for a specific period and let them filter it and get all the dada beautifully presented to them which is a huge bonus for a student.
+
+\newpage
+
+
+\newpage
+
+\section{System study}
+\hspace{1em}
+
+\subsection{Existing system}
+
+\Large
+The present system is ineffective in maintaining a student centric model. It mainly consisted of web applications and very few mobile applications. The traditional way of maintaining record is time consuming, not easily accessible ,requires a computer, less user friendly, and laborious.\\
+
+\Large
+Apart from these all the system we have currently are mostly teacher centric which leads to a hard time for the students to navigate and find what they need.\\
+
+\Large
+Here are some disadvantages of existing system:
+\begin{itemize}\item Time consuming\item Not easily accessible
+\item Teacher centric\item Less student friendly
+\item Laborious
+\end{itemize}
+
+\vspace{1em}
+
+\subsection{Proposed system}
+
+\Large
+With our solution we are aiming to provide a simple and intuitive interface for the student. We are also looking forward to provide a student centric model in which the student will able to track his classes at the university.\\
+
+\Large
+Once the user get registered through their google sign in (which makes the signin and verification process efficient and easy ). The user will be provided with a popup menu in which they could select their respective division head and to which course they are enrolled to.after the completion of sign in process, we will have a wide range of options which include attendance tracking system, notes adding, which could include lecture videos, images and much more feature which make learning easier, it tend to have an added feature of upcoming events which help to clear the backlogs and make the work as timid and as clean as possible\\
+
+\begin{itemize}
+\item This system is developed in such a way that even a naive user can also operate the system easily.\item This system is also secure as the database is managed only bythe administrator of the system.\item It has an error free verification mechanism\item Easy way of accessing records and tracking attendance
+\end{itemize}
+
+
+\newpage
+
+\section{System study}
+\vspace{1em}
+
+\subsection{Software Requirements Specification}
+\vspace{1em}
+\subsection{System Objectives}
+\vspace{1em}
+\subsection{Hardware and Software tool requirements}
+\vspace{1em}
+
+\vspace{1em}
+
+\newpage
+
+\section{System Design}
+\vspace{1em}
+
+\subsection{Data Flow Diagrams}
+\vspace{1em}
+\subsection{Database Design}
+\vspace{1em}
+\subsection{Modular Design}
+\vspace{1em}
+\subsection{Input/Output Design}
+\vspace{1em}
+
+
+\newpage
+
+\section{System Implementation}
+\vspace{1em}
+
+\subsection{Sample code}
+\vspace{1em}
+\subsection{Screenshots}
+\vspace{1em}
+
+
+\newpage
+
+
+\section{System Testing}
+\vspace{1em}
+
+
+\newpage
+
+\section{Future Scope}
+\vspace{1em}
+
+\newpage
+
+\section{Conclusion}
+\vspace{1em}
+
+\newpage
+
+
+\section{Reference}
+\vspace{1em}
+
+
+\newpage
+
 
 \end{document}
