update report + add pdf

--- a/docs/report.tex
+++ b/docs/report.tex
@@ -221,6 +221,38 @@ Abhai Kollara
 
 \section{Abstract}
 \vspace{1em}
+\subsection{About the project}
+
+We are living in an age where the art of technology and the art of teaching has come a long way. With bridge we intent to interlace those by helping to bridge the communication gap between teachers and students. Currently, even though teachers use technology to reach out to students the solutions are more or less ad-hoc. The communication is spread over different channels, sometimes a phone call, sometimes a text message, and sometimes nothing at all. There lacks an efficient way for teachers to communicate to students directly as a group or individually. Also there is no easy way for the students and teachers to keep track of the tasks they have in hand. It is at times really hard for teachers to reach students most of time and they end up relying on the class representative to deliver the message which in itself is not bad, but is less efficient.
+
+Bridge intents to solve all the above stated problems by implementing a application using which the teachers and students can communicate seamlessly with each other, keep track of everything that they have to do, get replies asap and just about anything that helps make the student teacher communication much more effective and easy.
+
+In here we will have ways in which
+\begin{itemize}
+\item Teachers will be able to post all details about assignments and schedule exams to a common calender which will be visible to the respective students at any time.
+\item Teachers can also publish any results as well as remarks about a student or a group.
+\end{itemize}
+Now, for students
+
+\begin{itemize}
+\item They can always see what is coming up next in their calender
+\item They can have a place to update their attendance 
+\item They can note down notes of each class and view them later
+\item They can catch up the upcoming events
+\end{itemize}
+\subsection{Interface}
+
+\subsubsection{Students}
+
+The initial window of the project will be a quick glance of the list of things that are coming up. From there they will be able to navigate to any specific list item or view be able to have a conversation with someone. The student will also be able to mark tasks as completed once they have been done with something so that they will not be reminded of it again. Through this they can also get their doubts cleared or queries answered.
+
+\subsubsection{Teachers}
+
+Teachers essentially get a platform to communicate with the students easily and without much hassle once they are out of college. Teachers can at any time respond to any doubts by students so as to help them with their studies. They can also add in any assignments that is due or any tests that is coming up to a calender which is viewable to all.
+
+\subsection{Technology used}
+
+The project is meant to be developed on both web and mobile devices. The backend will be written in python 2 using the django framework and flask or falcon for additional microservices. The frontend will be developed in web languages html, css and javascript. We will be using an SQL database to store and retrieve data essential for the project to function. All of the database interaction to the SQL server will be done through a python interface in order to go along with the other python components of the project.
 
 \newpage
 
@@ -374,6 +406,27 @@ It has a normal calender like intercase with events listed under the specific da
 \section{System Testing}
 \vspace{1em}
 
+The aim of the system testing process was to determine all defects in our project. The program was subjected to a set of test inputs and various observations were made and based on these observations it will be decided whether the program behaves as expected or not.
+
+Our Project went through four levels of testing
+\begin{itemize}
+\item Unit testing
+\item Integration testing
+\item System testing
+\item Component Interface Testing
+\end{itemize}
+
+\subsection{Unit testing}
+Unit testing is undertaken when a module has been created and successfully reviewed. In order to test a single module we need to provide a complete en- vironment i.e. besides the module we would require. The procedures which belong to other modules that the module under test calls non local data structures that module access a procedure to call the functions of the mod- ule under test with appropriate parameters. Unit testing was done on each and every module that is described under module wise description.
+
+\subsection{Integration testing}
+In this type of testing we test various integration of the project module by providing the input. The primary objective is to test the module interfaces in order to ensure that no errors are occurring when one module invokes the other module.
+
+\subsection{System testing}
+System testing, or end-to-end testing, tests a completely integrated system to verify that it meets its requirements. For example, a system test might involve testing a logon interface, then creating and editing an entry, plus sending or printing results, followed by summary processing or deletion (or archiving) of entries, then logoff.In addition, the software testing should ensure that the program, as well as working as expected, does not also destroy or partially corrupt its operating environment or cause other processes within that environment to become inoperative (this includes not corrupting shared memory, not consuming or locking up excessive resources and leaving any parallel processes unharmed by its presence).
+
+\subsection{Component interface testing}
+The practice of component interface testing can be used to check the handling of data passed between various units, or subsystem components, beyond full integration testing between those units. The data being passed can be con- sidered as ”message packets” and the range or data types can be checked, for data generated from one unit, and tested for validity before being passed into another unit. One option for interface testing is to keep a separate log file of data items being passed, often with a timestamp logged to allow analysis of thousands of cases of data passed between units for days or weeks. Tests can include checking the handling of some extreme data values while other interface variables are passed as normal values. Unusual data values in an interface can help explain unexpected performance in the next unit. Com- ponent interface testing is a variation of black box testing, with the focus on the data values beyond just the related actions of a subsystem component.
 
 \newpage
 
