--- a/docs/report.tex
+++ b/docs/report.tex
@@ -72,7 +72,7 @@ In partial fulfilment of the requirements for the award of degree of Bachelor of
 \hspace{1em}
 
 \LARGE
-DIVISION OF COMPUTER ENGINEERING 
+DIVISION OF COMPUTER ENGINEERING
 
 SCHOOL OF ENGINEERING
 
@@ -153,7 +153,7 @@ Project Coordinator\\
 \end{minipage}%
 \begin{minipage}[b]{0.33333\textwidth}
 \raggedleft
-Anu Ajith
+Anu M.
 
 Project Guide\\
 \end{minipage}
@@ -177,20 +177,20 @@ We take this opportunity to express our profound gratitude and deep regards to o
  and \textbf{Mr Damodaran.V}
  , Division of Computer Science our batch coordinator for her constant supervision and support for completing the project. We extend our sincere thanks to our respected Head of the department, \textbf{Ancy Zachariah}
  ,Head of Division,Division of Computer Science and all other faculty members of for sharing their valuable time and knowledge with us. We thank God, the almighty for blessing us with his grace and taking our endeavour to a successful culmination. Lastly we would like to thank my friends and family for their constant encouragement without which this project would not have been possible.
- 
+
  \begin{flushright}
- 
+
   \vspace{2em}
-  
+
  \Large
  Thanking you,\\
  \vspace{1em}
- 
+
  \Large
  Abin Simon\\
  Aayisha A A\\
  Abhai Kollara\\
- 
+
  \end{flushright}
 
 % \vspace*{\fill}
@@ -218,6 +218,8 @@ Abhai Kollara
 \end{minipage}
 
 \newpage
+\tableofcontents
+\newpage
 
 \section{Abstract}
 \vspace{1em}
@@ -236,23 +238,14 @@ Now, for students
 
 \begin{itemize}
 \item They can always see what is coming up next in their calender
-\item They can have a place to update their attendance 
+\item They can have a place to update their attendance
 \item They can note down notes of each class and view them later
 \item They can catch up the upcoming events
 \end{itemize}
-\subsection{Interface}
-
-\subsubsection{Students}
-
-The initial window of the project will be a quick glance of the list of things that are coming up. From there they will be able to navigate to any specific list item or view be able to have a conversation with someone. The student will also be able to mark tasks as completed once they have been done with something so that they will not be reminded of it again. Through this they can also get their doubts cleared or queries answered.
-
-\subsubsection{Teachers}
-
-Teachers essentially get a platform to communicate with the students easily and without much hassle once they are out of college. Teachers can at any time respond to any doubts by students so as to help them with their studies. They can also add in any assignments that is due or any tests that is coming up to a calender which is viewable to all.
 
 \subsection{Technology used}
 
-The project is meant to be developed on both web and mobile devices. The backend will be written in python 2 using the django framework and flask or falcon for additional microservices. The frontend will be developed in web languages html, css and javascript. We will be using an SQL database to store and retrieve data essential for the project to function. All of the database interaction to the SQL server will be done through a python interface in order to go along with the other python components of the project.
+The project is meant to be developed on both web and mobile devices. The backend will be written in python 2 using the django framework and falcon for additional microservices. The frontend will be developed in web languages html, css and javascript. We will be using an SQL database to store and retrieve data essential for the project to function. All of the database interaction to the SQL server will be done through a python interface in order to go along with the other python components of the project.
 
 \newpage
 
@@ -330,7 +323,8 @@ the administrator of the system.
 \vspace{1em}
 \begin{itemize}
 \item RAM: Recommended 512MB or above
-\item Storage: 10 GB or above\item Connectivity: Low latency internet with high bandwidth
+\item Storage: 10 GB or above
+\item Connectivity: Low latency internet with high bandwidth
 \end{itemize}
 \subsubsection{Software specification}
 \begin{itemize}
@@ -406,7 +400,7 @@ It has a normal calender like intercase with events listed under the specific da
 \section{System Testing}
 \vspace{1em}
 
-The aim of the system testing process was to determine all defects in our project. The program was subjected to a set of test inputs and various observations were made and based on these observations it will be decided whether the program behaves as expected or not.
+The aim of the system testing process was to determine all defects in our project. The program was subjected to a set of test inputs and various observations were made and based on these observations it will be decided whether the program behaves as expected or not.
 
 Our Project went through four levels of testing
 \begin{itemize}
@@ -423,7 +417,7 @@ Unit testing is undertaken when a module has been created and successfully revie
 In this type of testing we test various integration of the project module by providing the input. The primary objective is to test the module interfaces in order to ensure that no errors are occurring when one module invokes the other module.
 
 \subsection{System testing}
-System testing, or end-to-end testing, tests a completely integrated system to verify that it meets its requirements. For example, a system test might involve testing a logon interface, then creating and editing an entry, plus sending or printing results, followed by summary processing or deletion (or archiving) of entries, then logoff.In addition, the software testing should ensure that the program, as well as working as expected, does not also destroy or partially corrupt its operating environment or cause other processes within that environment to become inoperative (this includes not corrupting shared memory, not consuming or locking up excessive resources and leaving any parallel processes unharmed by its presence).
+System testing, or end-to-end testing, tests a completely integrated system to verify that it meets its requirements. For example, a system test might involve testing a logon interface, then creating and editing an entry, plus sending or printing results, followed by summary processing or deletion (or archiving) of entries, then logoff.In addition, the software testing should ensure that the program, as well as working as expected, does not also destroy or partially corrupt its operating environment or cause other processes within that environment to become inoperative (this includes not corrupting shared memory, not consuming or locking up excessive resources and leaving any parallel processes unharmed by its presence).
 
 \subsection{Component interface testing}
 The practice of component interface testing can be used to check the handling of data passed between various units, or subsystem components, beyond full integration testing between those units. The data being passed can be con- sidered as ”message packets” and the range or data types can be checked, for data generated from one unit, and tested for validity before being passed into another unit. One option for interface testing is to keep a separate log file of data items being passed, often with a timestamp logged to allow analysis of thousands of cases of data passed between units for days or weeks. Tests can include checking the handling of some extreme data values while other interface variables are passed as normal values. Unusual data values in an interface can help explain unexpected performance in the next unit. Com- ponent interface testing is a variation of black box testing, with the focus on the data values beyond just the related actions of a subsystem component.
@@ -432,11 +426,14 @@ The practice of component interface testing can be used to check the handling of
 
 \section{Future Scope}
 \vspace{1em}
+The  system in the future expects to be more inevery way. Automate more components and also create new components for both teachers and students alike.
+
 
 \newpage
 
 \section{Conclusion}
 \vspace{1em}
+A conscious effort has been made while creating and developing the software package ,making use of existing tools, techniques and resource that would cater the demands .The project has shown us the finer aspect of database management system.While making the system, an eye has been kept on making it as user-friendly, as cost-effective as possible. As such one may hope that the system will be acceptable to any user and will adequately meet his/her needs. The entire project is menu assisted and highly interactive. On trial run the performance was found to be satisfactory. But as in case of any system development processes , there were are a number of shortcomings, there have been some shortcomings in the development of this system also. Thus project is still under modification.
 
 \newpage
 
